@@ -24,7 +24,7 @@
         <surefire.version>3.1.2</surefire.version>
         <surefireArgLine/>
         <failsafe.version>3.1.2</failsafe.version>
-        <failsafeArgLine/>
+        <failsafeArgLine>-Djava.security.manager=allow</failsafeArgLine>
         <antrun.plugin.version>3.1.0</antrun.plugin.version>
         <maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
     </properties>
@@ -98,6 +98,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
